--- a/src/main/resources/application-externaldb.properties
+++ b/src/main/resources/application-externaldb.properties
@@ -6,4 +6,4 @@
 #      validate para verificar que las tablas están bien, sin modificarlas
 #      update para tratar de modificar las tablas si no están como debieran
 spring.jpa.hibernate.ddl-auto: create-drop
-spring.datasource.url: jdbc:hsqldb:hsql://localhost/iwdb
+spring.datasource.url: jdbc:hsqldb:hsql://localhost:20126/iwdb
